--- a/index.html
+++ b/index.html
@@ -20,10 +20,7 @@
     </div>
     <footer>
         <img src="img/sunny_logo4.png">
-        ©2021 Ok Drugs LLC. All Rights Reserved.
-RETURN POLICY
-TERMS & LEGAL
-PRIVACY NOTICE
+        ©2023 SunnySchool.  All rights Reserved.
         <img src="img/fb.png">
         <img src="img/is.png">
         <img src="img/tw.png">
