--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <menu>
         <img src="img/sunny_logo3.png" style="margin-right:200px">
-        <a href='index.html'>홈ddd</a>    
+        <a href='index.html'>홈</a>    
         <a href='self.html'>자기소개</a>    
         <a href='portfolio.html'>포트폴리오</a>    
         <a href='blog.html'>블로그</a>
