--- a/wishlist2.html
+++ b/wishlist2.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>동아리 WishList</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Hahmlet:wght@300&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Hahmlet:wght@500&display=swap');
         * {
             font-family: 'Hahmlet', serif;
         }
         .bg {
             width: 360px;
-            background-image: url('img/bg-grid.png');
+            background-image: url("img/bg-grid.png");            
         }
         .bucket {
             width: 160px;
