--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <h1 class="title">환영합니다</h1>
-    <h2><a href='wishlist.html'>동아리 WhishList</a></h2>
+    <h2><a href='wishlist.html'>동아리 WishList</a></h2>
     <button>버튼</button>
 </body>
 </html>
