--- a/wishlist.html
+++ b/wishlist.html
@@ -52,7 +52,7 @@
     <h1 class="title">동아리 WishList</h1>
     <p class="msg">이번엔 꼭 지키자!</p>
     <div class="flex-row wrap">
-        <div class="bucket img1 center">Whish List 페이지 만들기</div>
+        <div class="bucket img1 center">Wish List 페이지 만들기</div>
         <div class="bucket img2 center">나만의 프로필 링크 만들기</div>
         <div class="bucket img2 center">인생네컷 사진 페이지 만들기</div>
         <div class="bucket img1 center done">ChatGPT로 페이지 만들기</div>
