3주차 프로젝트

--- a/profile_d2.html
+++ b/profile_d2.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,18 +8,22 @@
     <title>PM 김르탄</title>
     <style>
         @import url('css/pretendard.css');
+
         * {
-            font-family: "Pretendard",serif;
+            font-family: "Pretendard", serif;
         }
+
         body {
-            background-color:#3C3D47;
+            background-color: #3C3D47;
         }
+
         .pro {
             display: flex;
             flex-direction: row;
             align-items: flex-start;
             margin-bottom: 40px;
         }
+
         .profile {
             width: 58px;
             height: 58px;
@@ -28,26 +33,30 @@
             background-position: center;
             background-size: cover;
         }
+
         .headcopy {
             display: flex;
             flex-direction: column;
             align-items: flex-start;
             width: 260px;
         }
+
         .main {
-            color : #FFFFFF;
+            color: #FFFFFF;
             font-size: 27px;
-            size : 20px;
+            size: 20px;
             font-weight: 800;
             margin: 0%;
         }
+
         .sub {
-            color : #B1B1B5;
+            color: #B1B1B5;
             font-size: 14px;
             font-weight: 400;
-            size : 14px;
+            size: 14px;
             margin-top: 10px;
         }
+
         .minis {
             display: flex;
             flex-direction: row;
@@ -57,7 +66,8 @@
             gap: 7px;
             margin-bottom: 68px;
         }
-        .minis > a {
+
+        .minis>a {
             width: 102px;
             height: 48px;
             border-radius: 32px;
@@ -66,20 +76,24 @@
             justify-content: center;
             align-items: center;
             font-size: 12px;
-            white-space:pre-wrap;
+            white-space: pre-wrap;
         }
+
         .notion {
             background: linear-gradient(287.96deg, rgba(0, 0, 0, 0.16) 15.1%, rgba(0, 0, 0, 0) 83.32%), #F7F6F3;
-            color:#84827D;
+            color: #84827D;
         }
+
         .brunch {
             background: linear-gradient(287.96deg, rgba(0, 0, 0, 0.16) 15.1%, rgba(0, 0, 0, 0) 83.32%), #02C3BD;
-            color:#FFFFFF;
+            color: #FFFFFF;
         }
+
         .facebook {
             background: linear-gradient(287.96deg, rgba(0, 0, 0, 0.16) 15.1%, rgba(0, 0, 0, 0) 83.32%), #4167B3;
-            color:#FFFFFF;
+            color: #FFFFFF;
         }
+
         .wrap {
             width: 320px;
             margin: 30px auto 0px auto;
@@ -88,6 +102,7 @@
             justify-content: center;
             align-items: center;
         }
+
         .bigs {
             display: flex;
             flex-direction: row;
@@ -96,7 +111,8 @@
             padding: 0px;
             gap: 10px;
         }
-        .bigs > a {
+
+        .bigs>a {
             width: 123px;
             background-color: white;
             margin-bottom: 16px;
@@ -107,18 +123,21 @@
             padding: 20px 16px 16px 16px;
             border-radius: 8px;
         }
+
         .name {
             font-size: 22px;
             font-weight: 700;
             color: #222222;
             margin-bottom: 45px;
         }
+
         .desc {
             font-size: 12px;
             font-weight: 500;
             color: #555555;
             margin-bottom: 24px;
         }
+
         .btn {
             font-size: 12px;
             font-weight: 700;
@@ -129,6 +148,7 @@
         }
     </style>
 </head>
+
 <body>
     <div class="wrap">
         <div class="pro">
@@ -139,9 +159,10 @@
             <div class="profile"></div>
         </div>
         <div class="minis">
-            <a class="notion" target="_blank" href="https://spartacodingclub.kr/">노션             <span style="color:#FFFFFF">></span></a>
-            <a class="brunch" target="_blank" href="https://spartacodingclub.kr/">브런치         ></a>
-            <a class="facebook" target="_blank" href="https://spartacodingclub.kr/">페이스북       ></a>
+            <a class="notion" target="_blank" href="https://spartacodingclub.kr/">노션 <span
+                    style="color:#FFFFFF">></span></a>
+            <a class="brunch" target="_blank" href="https://spartacodingclub.kr/">브런치 ></a>
+            <a class="facebook" target="_blank" href="https://spartacodingclub.kr/">페이스북 ></a>
         </div>
         <div style="color:#FFFFFF;width: 320px;font-size: 14px;margin-bottom: 8px;">저를 소개합니다.</div>
         <div class="bigs">
@@ -156,7 +177,10 @@
                 <div class="btn">다운로드</div>
             </a>
         </div>
-        <div style="color:#B1B1B5;font-size: 14px;background-position: center;background-size: cover;position: absolute;bottom: 50px;">@kimrtan</div>
+        <div
+            style="color:#B1B1B5;font-size: 14px;background-position: center;background-size: cover;position: absolute;bottom: 50px;">
+            @kimrtan</div>
     </div>
 </body>
+
 </html>
