--- a/wishlist.html
+++ b/wishlist.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,12 +12,13 @@
         * {
             font-family: 'Hahmlet', serif;
         }
+
         .bg {
             width: 360px;
             background-image: url("https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/bg-grid.png");
             background-size: cover;
             background-position: center;
-            
+
             margin: auto;
         }
 
@@ -46,8 +48,10 @@
             margin: -5px 0 15px;
         }
     </style>
-    <link rel="stylesheet" type="text/css"href="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/sparta-bucket2.css">
+    <link rel="stylesheet" type="text/css"
+        href="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/sparta-bucket2.css">
 </head>
+
 <body class="bg center">
     <h1 class="title">동아리 WishList</h1>
     <p class="msg">이번엔 꼭 지키자!</p>
