--- a/wishlist_t6.html
+++ b/wishlist_t6.html
@@ -60,9 +60,7 @@
         <div class="bucket img1-t6 center">Whish List 페이지 만들기</div>
         <div class="bucket img2-t6 center">나만의 프로필 링크 만들기</div>
         <div class="bucket img3-t6 center">인생네컷 사진 페이지 만들기</div>
-        <div class="bucket img4-t6 center done">ChatGPT로 페이지 만들기</div>
-        <div class="bucket img1-t6 center">날씨를 알려주는 페이지 만들기</div>
-        <div class="bucket img2-t6 center">포스팅박스 만들기</div>
+        <div class="bucket img4-t6 center done-t4">ChatGPT로 페이지 만들기</div>
     </div>
 </body>
 
