--- a/wishlist_t7.html
+++ b/wishlist_t7.html
@@ -58,11 +58,11 @@
     <p class="msg">이번엔 꼭 지키자!</p>
     <div class="flex-row wrap">
         <div class="bucket img1-t7 center">Whish List 페이지 만들기</div>
-        <div class="bucket img2 center">나만의 프로필 링크 만들기</div>
-        <div class="bucket img2 center">인생네컷 사진 페이지 만들기</div>
-        <div class="bucket img1 center done">ChatGPT로 페이지 만들기</div>
-        <div class="bucket img1 center">날씨를 알려주는 페이지 만들기</div>
-        <div class="bucket img2 center">포스팅박스 만들기</div>
+        <div class="bucket img1-t7 center">나만의 프로필 링크 만들기</div>
+        <div class="bucket img1-t7 center">인생네컷 사진 페이지 만들기</div>
+        <div class="bucket img1-t7 center done">ChatGPT로 페이지 만들기</div>
+        <div class="bucket img1-t7 center">날씨를 알려주는 페이지 만들기</div>
+        <div class="bucket img1-t7 center">포스팅박스 만들기</div>
     </div>
 </body>
 
